--- a/frontend/app/styles/main.css
+++ b/frontend/app/styles/main.css
@@ -275,6 +275,9 @@ date-custom p {
 .reservations li a span {
     font-size: 14px;
 }
+.reservations li span a {
+    display: inline;
+}
 .reservations li a span i {
     padding: 0 5px 0 0;
 }
@@ -291,6 +294,7 @@ span.slide {
     display: none;
     background: #CFD4DA;
     width: 100%;
+    padding: 5px;
 }
 span.slide b {
     display: block;
