--- a/frontend/app/views/newreservation.html
+++ b/frontend/app/views/newreservation.html
@@ -13,37 +13,22 @@
             <input type="email" class="form-control" data-ng-model="$parent.res.email" id="email" placeholder="Email">
         </div>
         <div class="form-group">
-            <select class="form-control" data-ng-model="$parent.res.numberOfGuests" required>
-                <option value="" disabled selected class="form-placeholder">Broj osoba</option>
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-            </select>
+            <div class="form-group">
+                <label for="number_of_guests" style="text-align:left;width:100%">Broj gostiju</label>
+                <input type="number" class="form-control" data-ng-model="$parent.res.number_of_guests" min="1" max="100" required
+                    style="display:inline-block;margin-left:4px;">
+            </div>
         </div>
         <div class="form-group">
             <span style="margin-right:5px;">
                 <label for="from" style="text-align:left;">OD</label>
-                <select class="form-control" data-ng-model="$parent.res.startTime" required style="display:inline-block;width:30%;margin-left:4px;">
-                    <option>14:00</option>
-                    <option>17:30</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                </select>
+                <select data-ng-model="$parent.res.startTime" data-ng-options="o.value as (o.value) for o in slider.options.stepsArray"
+                    class="form-control" style="display:inline-block;width:30%;margin-left:4px;"></select>
             </span>
             <span style="margin-left:5px">
                 <label for="to" style="text-align:left;">DO</label>
-                <select class="form-control" data-ng-model="$parent.res.endTime" required style="display:inline-block;width:30%;">
-                    <option>16:00</option>
-                    <option>19:00</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                </select>
+                <select data-ng-model="$parent.res.endTime" data-ng-options="o.value as (o.value) for o in slider.options.stepsArray"
+                    class="form-control" style="display:inline-block;width:30%;margin-left:4px;"></select>
             </span>
         </div>
         <div class="form-group" style="text-align:left;">
