--- a/frontend/app/views/reservations.html
+++ b/frontend/app/views/reservations.html
@@ -21,10 +21,10 @@
                 <!-- <a class="btn btn-default" style="margin-right:6px;" href="#/home/" ui-sref="home.reservations">Otkaži</a> -->
                 <span>
                     <a style="" href="#/home/" ui-sref="home.editreservation({ id: res.id })">
-                        <button type="submit" class="btn btn-primary" ng-click="$parent.editReservation($index)">Izmeni</button>
+                        <button type="submit" class="btn btn-primary" ng-click="getReservation($index)">Izmeni</button>
                     </a>
                     <a style="" href="#/home/" ui-sref="home.reservations">
-                        <button type="submit" class="btn btn-primary" ng-click="$parent.cancelReservation()">Otkaži</button>
+                        <button type="submit" class="btn btn-primary" ng-click="cancelReservation()">Otkaži</button>
                     </a>
                 </span>
             </span>
