--- a/frontend/app/views/newreservation.html
+++ b/frontend/app/views/newreservation.html
@@ -33,7 +33,9 @@
         </div>
         <div class="form-group" style="text-align:left;">
             <label for="from">STO</label>
-            <input type="text" class="form-control" data-ng-model="$parent.res.tables" required id="tables" placeholder="Sto">
+            <tags-input ng-model="$parent.res.tables" add-on-paste="true">
+                <auto-complete source="loadTags($query)"></auto-complete>
+            </tags-input>
         </div>
         <div class="form-group">
             <textarea class="form-control" rows="3" data-ng-model="$parent.res.comment" placeholder="Komentar"></textarea>
