--- a/frontend/app/views/login.html
+++ b/frontend/app/views/login.html
@@ -14,7 +14,7 @@
         <div class="form-actions">
             <button type="submit" ng-disabled="form.$invalid" class="btn btn-primary">Login</button>
         </div>
-        <div data-ng-if="incorrectCredentials">
+        <div data-ng-if="loginError">
             <p class="login-error">
                 {{error}}
             </p>
