--- a/frontend/app/views/main.html
+++ b/frontend/app/views/main.html
@@ -18,7 +18,7 @@
 
                 <div class="col-xs-12 col-sm-8 text-center">
                     <div class="panel">
-                        <img ng-src="{{$parent.selectedLevel.schema}}" class="img-rounded schema-img" alt="Plan" width="750" height="500">
+                        <img ng-src="{{selectedLevel.schema}}" class="img-rounded schema-img" alt="Plan" width="750" height="500">
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-4 text-center">
