Omoguceno otkazivanje rezervacije

--- a/frontend/app/views/editreservation.html
+++ b/frontend/app/views/editreservation.html
@@ -38,7 +38,7 @@
         <div class="form-group">
             <textarea class="form-control" rows="3" data-ng-model="res.comment" placeholder="Komentar"></textarea>
         </div>
-        <a class="btn btn-default" style="margin-right:6px;" href="#/home/" ui-sref="home.reservations">Otkaži</a>
+        <a class="btn btn-default" style="margin-right:6px;" href="#/home/" ui-sref="home.reservations">Odustani</a>
         <a style="margin-right:6px;" href="#/home/" ui-sref="home.reservations">
             <button type="submit" class="btn btn-primary" ng-click="$parent.editReservation()">Sačuvaj</button>
         </a>
