--- a/frontend/app/views/reservations.html
+++ b/frontend/app/views/reservations.html
@@ -24,7 +24,7 @@
                         <button type="submit" class="btn btn-primary" ng-click="getReservation($index)">Izmeni</button>
                     </a>
                     <a style="" href="#/home/" ui-sref="home.reservations">
-                        <button type="submit" class="btn btn-primary" ng-click="cancelReservation()">Otkaži</button>
+                        <button type="submit" class="btn btn-primary" ng-click="cancelReservation($index)">Otkaži</button>
                     </a>
                 </span>
             </span>
