Popravljen bag pri menjaju spratova u skladu sa novim racunanjem radnog vremena

--- a/frontend/app/views/main.html
+++ b/frontend/app/views/main.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     <div class="container">
-        <button class="save-button" data-ng-click="saveLayout()">Save layout</button>
+        <button class="save-button btn btn-primary" data-ng-click="saveLayout()">Save layout</button>
         <div id="#drag-area" class="white-area">
             <div class="row">
 
